--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
       Click the button to randomly generate a writing excersise prompt. Don't like what you get? Just click again for a new prompt! (Note: this is still in development and does not work)
     </p>
     <hr/>
+    <div id="promptDisplay">
+
+    </div>
+    <button onclick="newPrompt()">New Prompt</button>
+    
+    <script src="generator.js"></script>
   </body>
 </html>
