--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </p>
     <hr/>
     <div id="promptDisplay">
-
+      <!-- Prompt displayed here -->
     </div>
     <button onclick="newPrompt()">New Prompt</button>
-    
+
     <script src="generator.js"></script>
   </body>
 </html>
