--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
       Click the button to randomly generate a writing excersise prompt. Don't like what you get? Just click again for a new prompt! (Note: this is still in development and does not work)
     </p>
     <hr/>
-    <div id="promptDisplay">
-      <!-- Prompt displayed here -->
+    <p>
+      Write about the image from the point of a
+    </p>
+    <div id="Person1">
+      <!-- Person 1 displayed here -->
     </div>
+    <p>
+      and a
+    </p>
+    <div id="Person2">
+      <!-- Person 2 displayed here -->
+    </div>
+    <hr/>
     <button onclick="newPrompt()">New Prompt</button>
 
     <script src="generator.js"></script>
