--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       Click the button to randomly generate a writing excersise prompt. Don't like what you get? Just click again for a new prompt! (Note: this is still in development and does not work)
     </p>
     <hr/>
+    <img id="image" width="25%">
     <p>
       Write about the image from the point of a
     </p>
